--- a/popup/styles.css
+++ b/popup/styles.css
@@ -2,20 +2,20 @@ body {
   font-family: Helvetica, sans-serif, Tahoma, sans-serif;
   font-size: 100%;
   margin: 0;
-  background: #e1e3e4;
-  color: #313131;
+  background: #FFF;
+  color: #000;
   box-sizing: border-box;
 }
 
 a {
-  color: #3c948b;
+  color: #4A90E2;
   outline: none;
   text-decoration: none;
   font-size: 13px;
 }
 
 a:hover {
-  color: #313131;
+  color: #3483DE;
 }
 
 pre {
@@ -26,14 +26,21 @@ pre {
 input {
   height: 2em;
   padding: 0 4px;
+  border: 1px solid rgba(216, 216, 216, 0.1);
+  box-shadow: none;
   box-sizing: border-box;
 }
 
 textarea {
-  color: #313131;
   border: none;
   box-shadow: none;
+  padding: 10px 8px;
   box-sizing: border-box;
+}
+
+input, textarea {
+  color: rgba(34, 34, 40, 0.7);
+  background-color: rgba(216, 216, 216, 0.2);
 }
 
 section {
@@ -41,15 +48,6 @@ section {
 }
 
 /* Main */
-
-.title {
-  margin: 0;
-  padding: 6px 0;
-  text-align: center;
-  text-transform: uppercase;
-  color: #faf9f9;
-  background-color: #55585d;
-}
 
 .app {
   width: 15em;
@@ -60,18 +58,22 @@ section {
 .btn {
   padding: 0 20px;
   line-height: 20px;
+  border-radius: 20px;
   border: none;
   outline: none;
+
   font-weight: 500;
-  color: #fff;
-  background: #3c948b;
   text-transform: uppercase;
+  
+  background-color: #4A90E2;
+  color: #FFF;
+
   cursor: pointer;
   display: block;
 }
 
 .btn:hover {
-  background: #313131;
+  background: #3483DE;
 }
 
 .hidden {
@@ -99,6 +101,8 @@ section {
 /* Share */
 
 .share .btn {
+  padding-top: 8px;
+  padding-bottom: 8px;
   margin: auto;
 }
 
