--- a/popup/css/styles.css
+++ b/popup/css/styles.css
@@ -57,8 +57,7 @@ input, textarea {
 }
 
 input:focus, textarea:focus {
-  outline: -webkit-focus-ring-color auto 2px;
-  outline-color: #F1B70F;
+  box-shadow: 0 2px 6px 0 #F1B70F;
 }
 
 section {
