--- a/css/main.css
+++ b/css/main.css
@@ -13,8 +13,10 @@ body {
 }
 
 .wrapper {
-  height: 100%;
-  padding-top: 165px;
+  height: 90%;
+  height: calc(100% - 120px);
+  padding: 65px 0 65px;
+  overflow: auto;
 }
 
 /* ----------------------------------- */
@@ -23,7 +25,7 @@ body {
   width: 100%;
   height: 60px;
   background-color: #F2C40F;
-  position: absolute;
+  position: relative;
 }
 
 .rectangle-upper-bound {
