--- a/css/main.css
+++ b/css/main.css
@@ -14,14 +14,13 @@ body {
 
 a, .link {
   outline: none;
-  text-decoration: none;
   cursor: pointer;
   color: #F1B70F;
 }
 
-a:hover, a:visited,
-.link:hover {
+a:hover, a:visited, .link:hover {
   color: #F2C40F;
+  text-decoration: none;
 }
 
 .wrapper {
