--- a/css/main.css
+++ b/css/main.css
@@ -30,36 +30,27 @@ a:hover, a:visited, .link:hover {
 
 /* ----------------------------------- */
 
-.rectangle-bound {
-  width: 100%;
-  height: 60px;
-  background-color: #F2C40F;
-  position: relative;
-}
-
-.rectangle-upper-bound {
-  border-bottom: 1px solid #979797;
-  left: 0;
-  top: 0;
-}
-
-.rectangle-lower-bound {
-  border-top: 1px solid #979797;
-  left: 0;
-  bottom: 0;
-}
-
-/* ----------------------------------- */
-
 .siema {
   box-shadow: 0 5px 5px 0 rgba(76,108,231,0.12);
+}
+
+.siema-actions {
+  margin: 15px 0 45px;
+  text-align: center;
+}
+
+.disclaimer {
+  font-size: smaller;
+  display: inline-block;
+  vertical-align: middle;
+  color: #666;
 }
 
 /* ----------------------------------- */
 
 .logo {
   width: 220px;
-  margin: 0 auto 55px;
+  margin: 0 auto 45px;
   padding: 0 12px;
 }
 
@@ -75,7 +66,7 @@ a:hover, a:visited, .link:hover {
 /* ----------------------------------- */
 
 .description {
-  padding: 50px 0 35px;
+  padding-bottom: 35px;
   font-size: 18px;
   font-family: 'HelveticaNeue', Helvetica, sans-serif;
   color: #868587;
